@@ -827,8 +827,7 @@ public class PolicyIterationManager {
           Pair<DecompositionStatus, PolicyBound> res =
               computeByDecomposition(template, p, lemmas, startConstraintLemmas, abstraction);
           switch (res.getFirstNotNull()) {
-            case BOUND_COMPUTED:
-
+            case BOUND_COMPUTED -> {
               // Put the computed bound.
               PolicyBound bound = res.getSecondNotNull();
               if (checkPolicyInitialCondition) {
@@ -836,17 +835,15 @@ public class PolicyIterationManager {
               }
               abstraction.put(template, bound);
               continue;
-            case UNBOUNDED:
-
+            }
+            case UNBOUNDED -> {
               // Any of the components is unbounded => the sum is unbounded as
               // well.
               continue;
-            case ABSTRACTION_REQUIRED:
-
+            }
+            case ABSTRACTION_REQUIRED -> {
               // Continue with abstraction.
-              break;
-            default:
-              throw new UnsupportedOperationException("Unexpected case");
+            }
           }
         }
 
@@ -886,7 +883,7 @@ public class PolicyIterationManager {
         }
 
         switch (status) {
-          case OPT:
+          case OPT -> {
             Optional<Rational> bound = optEnvironment.upper(handle, EPSILON);
             Optional<PolicyBound> policyBound =
                 getPolicyBound(
@@ -903,17 +900,13 @@ public class PolicyIterationManager {
             }
 
             logger.log(Level.FINE, "Got bound: ", bound);
-            break;
-
-          case UNSAT:
-            throw new CPAException("Unexpected UNSAT");
-
-          case UNDEF:
+          }
+          case UNSAT -> throw new CPAException("Unexpected UNSAT");
+          case UNDEF -> {
             logger.log(Level.WARNING, "Solver returned undefined status on the problem: ");
             logger.log(Level.INFO, optEnvironment.toString());
             throw new CPATransferException("Solver returned undefined status");
-          default:
-            throw new AssertionError("Unhandled enum value in switch: " + status);
+          }
         }
       }
     } catch (SolverException e) {
@@ -974,7 +967,7 @@ public class PolicyIterationManager {
       return Pair.of(ABSTRACTION_REQUIRED, null);
     }
 
-    // Slices and bounds for all template sub-components.
+    // Slices and bounds for all template subcomponents.
     List<Set<BooleanFormula>> slices = new ArrayList<>(pTemplate.size());
     List<PolicyBound> policyBounds = new ArrayList<>();
     List<Rational> coefficients = new ArrayList<>();
@@ -1022,7 +1015,7 @@ public class PolicyIterationManager {
 
     // Abstraction required if not all predecessors, SSA forms,
     // and pointer target sets are the same.
-    PolicyBound firstBound = policyBounds.get(0);
+    PolicyBound firstBound = policyBounds.getFirst();
     for (PolicyBound bound : policyBounds) {
       if (!bound.getPredecessor().equals(firstBound.getPredecessor())
           || !bound.getFormula().getSsa().equals(firstBound.getFormula().getSsa())
@@ -1176,20 +1169,18 @@ public class PolicyIterationManager {
       return true;
     }
 
-    switch (abstractionLocations) {
-      case ALL:
-        return true;
-      case LOOPHEAD:
+    return switch (abstractionLocations) {
+      case ALL -> true;
+
+      case LOOPHEAD -> {
         LoopBoundState loopState =
             AbstractStates.extractStateByType(totalState, LoopBoundState.class);
 
-        return (cfa.getAllLoopHeads().orElseThrow().contains(node)
+        yield (cfa.getAllLoopHeads().orElseThrow().contains(node)
             && (loopState == null || loopState.isLoopCounterAbstracted()));
-      case MERGE:
-        return node.getNumEnteringEdges() > 1;
-      default:
-        throw new UnsupportedOperationException("Unexpected state");
-    }
+      }
+      case MERGE -> node.getNumEnteringEdges() > 1;
+    };
   }
 
   /**
@@ -1286,8 +1277,9 @@ public class PolicyIterationManager {
   private BooleanFormula extractFormula(AbstractState pFormulaState) {
     List<BooleanFormula> constraints = new ArrayList<>();
     for (AbstractState a : asIterable(pFormulaState)) {
-      if (!(a instanceof PolicyAbstractedState) && a instanceof FormulaReportingState) {
-        constraints.add(((FormulaReportingState) a).getFormulaApproximation(fmgr));
+      if (!(a instanceof PolicyAbstractedState)
+          && a instanceof FormulaReportingState formulaReportingState) {
+        constraints.add(formulaReportingState.getFormulaApproximation(fmgr));
       }
     }
     return bfmgr.and(constraints);
