@@ -79,7 +79,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
   /*
    * 2 lists with different lengths X, with a pointer somewhere,  -> X+ -> 0, should be equal only if the pointer is at a comparable location (examples are last and first)
    */
-  // TODO: fix test for non-abstraction of regions w pointers from outside of the list
+  // TODO: fix test for non-abstraction of regions w pointers from outside the list
   @Ignore
   @Test
   public void SLLDifferentLengthSomePointerLessOrEqualTest()
@@ -144,7 +144,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
   /*
    * 2 lists with different lengths X, with a pointer somewhere,  -> X+ -> 0, should be equal only if the pointer is at a comparable location (examples are last and first)
    */
-  // TODO: fix test for non-abstraction of regions w pointers from outside of the list
+  // TODO: fix test for non-abstraction of regions w pointers from outside the list
   @Ignore
   @Test
   public void DLLDifferentLengthSomePointerLessOrEqualTest()
@@ -209,7 +209,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
   /*
    * 2 lists with different lengths X, with a first and last pointer,  -> X+ -> 0, should be equal
    */
-  // TODO: fix test for non-abstraction of regions w pointers from outside of the list
+  // TODO: fix test for non-abstraction of regions w pointers from outside the list
   @Ignore
   @Test
   public void SLLDifferentLengthFstAndLstPointerLessOrEqualTest()
@@ -250,7 +250,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
   /*
    * 2 lists with different lengths X, with a first and last pointer,  -> X+ -> 0, should be equal
    */
-  // TODO: fix test for non-abstraction of regions w pointers from outside of the list
+  // TODO: fix test for non-abstraction of regions w pointers from outside the list
   @Ignore
   @Test
   public void DLLDifferentLengthFstAndLstPointerLessOrEqualTest()
@@ -293,7 +293,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
    *
    * @throws SMGException never thrown
    */
-  // TODO: fix test for non-abstraction of regions w pointers from outside of the list
+  // TODO: fix test for non-abstraction of regions w pointers from outside the list
   @Ignore
   @Test
   public void concreteAndAbstractedListLessOrEqualTest() throws SMGException, SMGSolverException {
@@ -401,7 +401,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
    *
    * @throws SMGException never thrown.
    */
-  // TODO: fix test for non-abstraction of regions w pointers from outside of the list
+  // TODO: fix test for non-abstraction of regions w pointers from outside the list
   @Ignore
   @Test
   public void concreteAndAbstractedListWSublistLessOrEqualTest()
@@ -529,7 +529,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
           // Build self pointers w differing target offsets into the list
           ValueAndSMGState selfPtrAndState =
               currentState.searchOrCreateAddress(
-                  obj, CPointerType.POINTER_TO_VOID, offsetsForPointers.get(0));
+                  obj, CPointerType.POINTER_TO_VOID, offsetsForPointers.getFirst());
           currentState = selfPtrAndState.getState();
           currentState =
               currentState.writeValueWithoutChecks(
@@ -712,7 +712,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
           // Build self pointers w differing target offsets into the list
           ValueAndSMGState selfPtrAndState =
               currentState.searchOrCreateAddress(
-                  obj, CPointerType.POINTER_TO_VOID, offsetsForPointers.get(0));
+                  obj, CPointerType.POINTER_TO_VOID, offsetsForPointers.getFirst());
           currentState = selfPtrAndState.getState();
           currentState =
               currentState.writeValueWithoutChecks(
@@ -843,7 +843,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
    *
    * @throws SMGException never thrown
    */
-  // TODO: fix test for non-abstraction of regions w pointers from outside of the list
+  // TODO: fix test for non-abstraction of regions w pointers from outside the list
   @Ignore
   @Test
   public void abstractedListWSublistLessOrEqualTest() throws SMGException, SMGSolverException {
@@ -1301,7 +1301,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
    * We have a list, we check the next components' existence, then we move the current pointer to
    * the next and free the prev segment. The resulting list should be covered by the previous.
    */
-  // TODO: fix test for non-abstraction of regions w pointers from outside of the list
+  // TODO: fix test for non-abstraction of regions w pointers from outside the list
   @Ignore
   @Test
   public void testSLLNextPointerFreeLoopEquality() throws CPAException, InterruptedException {
@@ -1322,9 +1322,9 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
       }
       // Should only be 1 list element
       assertThat(deref).hasSize(1);
-      currentState = deref.get(0).getSMGState();
-      assertThat(deref.get(0).hasSMGObjectAndOffset()).isTrue();
-      assertThat(deref.get(0).getOffsetForObject().asNumericValue().bigIntegerValue())
+      currentState = deref.getFirst().getSMGState();
+      assertThat(deref.getFirst().hasSMGObjectAndOffset()).isTrue();
+      assertThat(deref.getFirst().getOffsetForObject().asNumericValue().bigIntegerValue())
           .isEqualTo(BigInteger.ZERO);
       List<ValueAndSMGState> readNexts;
       if (i == listLength - 1) {
@@ -1349,7 +1349,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
       if (i < listLength - 1) {
         // Should only be 1 list element
         assertThat(readNexts).hasSize(1);
-        readNext = readNexts.get(0);
+        readNext = readNexts.getFirst();
       } else {
         assertThat(readNexts).hasSize(2);
         readNext = readNexts.get(1);
@@ -1433,7 +1433,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
       // Free current list segment
       List<SMGState> newStatesAfterFree = currentState.free(prevPtr, null, null);
       assertThat(newStatesAfterFree).hasSize(1);
-      currentState = newStatesAfterFree.get(0);
+      currentState = newStatesAfterFree.getFirst();
       notAbstractedListObj =
           currentState
               .dereferencePointerWithoutMaterilization(readPointer)
@@ -1457,9 +1457,9 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
         currentState.dereferencePointer(lastNextPointer);
     // Should only be 1 list element
     assertThat(deref).hasSize(1);
-    currentState = deref.get(0).getSMGState();
-    assertThat(deref.get(0).hasSMGObjectAndOffset()).isTrue();
-    assertThat(deref.get(0).getOffsetForObject().asNumericValue().bigIntegerValue())
+    currentState = deref.getFirst().getSMGState();
+    assertThat(deref.getFirst().hasSMGObjectAndOffset()).isTrue();
+    assertThat(deref.getFirst().getOffsetForObject().asNumericValue().bigIntegerValue())
         .isEqualTo(BigInteger.ZERO);
     List<ValueAndSMGState> readNextsInLast =
         evaluator.readValueWithPointerDereference(
@@ -1471,8 +1471,8 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
     // Should only be 1 list element
     assertThat(readNextsInLast).hasSize(2);
     // When materializing, the first element is the minimal element, confirm that the value is 0
-    assertThat(readNextsInLast.get(0).getValue().isNumericValue()).isTrue();
-    assertThat(readNextsInLast.get(0).getValue().asNumericValue().bigIntegerValue())
+    assertThat(readNextsInLast.getFirst().getValue().isNumericValue()).isTrue();
+    assertThat(readNextsInLast.getFirst().getValue().asNumericValue().bigIntegerValue())
         .isEqualTo(BigInteger.ZERO);
     // Confirm that the other is materialized correctly
     currentState = readNextsInLast.get(1).getState();
@@ -1491,7 +1491,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
     // Now we free the list element from before
     List<SMGState> freeList = currentState.free(lastNextPointer, null, null);
     assertThat(freeList).hasSize(1);
-    currentState = freeList.get(0);
+    currentState = freeList.getFirst();
     // Compare the 2 states from before and now
     assertThat(currentState.isLessOrEqual(stateW1Left)).isTrue();
   }
@@ -1500,7 +1500,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
    * We have a list, we check the next components' existence, then we move the current pointer to
    * the next and free the prev segment. The resulting list should be covered by the previous.
    */
-  // TODO: fix test for non-abstraction of regions w pointers from outside of the list
+  // TODO: fix test for non-abstraction of regions w pointers from outside the list
   @Ignore
   @Test
   public void testDLLNextPointerFreeLoopEquality() throws CPAException, InterruptedException {
@@ -1521,9 +1521,9 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
       }
       // Should only be 1 list element
       assertThat(deref).hasSize(1);
-      currentState = deref.get(0).getSMGState();
-      assertThat(deref.get(0).hasSMGObjectAndOffset()).isTrue();
-      assertThat(deref.get(0).getOffsetForObject().asNumericValue().bigIntegerValue())
+      currentState = deref.getFirst().getSMGState();
+      assertThat(deref.getFirst().hasSMGObjectAndOffset()).isTrue();
+      assertThat(deref.getFirst().getOffsetForObject().asNumericValue().bigIntegerValue())
           .isEqualTo(BigInteger.ZERO);
       List<ValueAndSMGState> readNexts;
       if (i == listLength - 1) {
@@ -1548,7 +1548,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
       if (i < listLength - 1) {
         // Should only be 1 list element
         assertThat(readNexts).hasSize(1);
-        readNext = readNexts.get(0);
+        readNext = readNexts.getFirst();
       } else {
         assertThat(readNexts).hasSize(2);
         readNext = readNexts.get(1);
@@ -1622,7 +1622,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
       // Free current list segment
       List<SMGState> newStatesAfterFree = currentState.free(prevPtr, null, null);
       assertThat(newStatesAfterFree).hasSize(1);
-      currentState = newStatesAfterFree.get(0);
+      currentState = newStatesAfterFree.getFirst();
       notAbstractedListObj =
           currentState
               .dereferencePointerWithoutMaterilization(readPointer)
@@ -1646,9 +1646,9 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
         currentState.dereferencePointer(lastNextPointer);
     // Should only be 1 list element
     assertThat(deref).hasSize(1);
-    currentState = deref.get(0).getSMGState();
-    assertThat(deref.get(0).hasSMGObjectAndOffset()).isTrue();
-    assertThat(deref.get(0).getOffsetForObject().asNumericValue().bigIntegerValue())
+    currentState = deref.getFirst().getSMGState();
+    assertThat(deref.getFirst().hasSMGObjectAndOffset()).isTrue();
+    assertThat(deref.getFirst().getOffsetForObject().asNumericValue().bigIntegerValue())
         .isEqualTo(BigInteger.ZERO);
     List<ValueAndSMGState> readNextsInLast =
         evaluator.readValueWithPointerDereference(
@@ -1660,8 +1660,8 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
     // Should only be 1 list element
     assertThat(readNextsInLast).hasSize(2);
     // When materializing, the first element is the minimal element, confirm that the value is 0
-    assertThat(readNextsInLast.get(0).getValue().isNumericValue()).isTrue();
-    assertThat(readNextsInLast.get(0).getValue().asNumericValue().bigIntegerValue())
+    assertThat(readNextsInLast.getFirst().getValue().isNumericValue()).isTrue();
+    assertThat(readNextsInLast.getFirst().getValue().asNumericValue().bigIntegerValue())
         .isEqualTo(BigInteger.ZERO);
     // Confirm that the other is materialized correctly
     currentState = readNextsInLast.get(1).getState();
@@ -1680,7 +1680,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
     // Now we free the list element from before
     List<SMGState> freeList = currentState.free(lastNextPointer, null, null);
     assertThat(freeList).hasSize(1);
-    currentState = freeList.get(0);
+    currentState = freeList.getFirst();
     // Compare the 2 states from before and now
     assertThat(currentState.isLessOrEqual(stateW1Left)).isTrue();
   }
@@ -1689,7 +1689,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
    * We have a list, we check the next components' existence, then we move the current pointer to
    * the next and free the prev segment. The resulting list should be covered by the previous.
    */
-  // TODO: fix test for non-abstraction of regions w pointers from outside of the list
+  // TODO: fix test for non-abstraction of regions w pointers from outside the list
   @Ignore
   @Test
   public void testDLLPrevPointerFreeLoopEquality() throws CPAException, InterruptedException {
@@ -1714,9 +1714,9 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
           .isEqualTo(0);
       // Should only be 1 list element
       assertThat(currentDeref).hasSize(1);
-      currentState = currentDeref.get(0).getSMGState();
-      assertThat(currentDeref.get(0).hasSMGObjectAndOffset()).isTrue();
-      assertThat(currentDeref.get(0).getOffsetForObject().asNumericValue().bigIntegerValue())
+      currentState = currentDeref.getFirst().getSMGState();
+      assertThat(currentDeref.getFirst().hasSMGObjectAndOffset()).isTrue();
+      assertThat(currentDeref.getFirst().getOffsetForObject().asNumericValue().bigIntegerValue())
           .isEqualTo(BigInteger.ZERO);
       // currentDeref is based on prev pointers, check that its equal to a deref of the external
       // pointer at that location (except the first case)
@@ -1734,17 +1734,17 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
         assertThat(currentState.getMemoryModel().getNestingLevel(pointersConcreteDifferentList[i]))
             .isEqualTo(0);
         assertThat(currentDerefFromExternal).hasSize(1);
-        currentState = currentDerefFromExternal.get(0).getSMGState();
-        assertThat(currentDerefFromExternal.get(0).hasSMGObjectAndOffset()).isTrue();
+        currentState = currentDerefFromExternal.getFirst().getSMGState();
+        assertThat(currentDerefFromExternal.getFirst().hasSMGObjectAndOffset()).isTrue();
         assertThat(
                 currentDerefFromExternal
-                    .get(0)
+                    .getFirst()
                     .getOffsetForObject()
                     .asNumericValue()
                     .bigIntegerValue())
             .isEqualTo(BigInteger.ZERO);
-        assertThat(currentDerefFromExternal.get(0).getSMGObject())
-            .isEqualTo(currentDeref.get(0).getSMGObject());
+        assertThat(currentDerefFromExternal.getFirst().getSMGObject())
+            .isEqualTo(currentDeref.getFirst().getSMGObject());
         assertThat(
                 currentState
                     .getMemoryModel()
@@ -1767,7 +1767,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
       if (i != 0) {
         // Should only be 1 list element
         assertThat(readPrevsOfCurrent).hasSize(1);
-        readPrevPointerAndState = readPrevsOfCurrent.get(0);
+        readPrevPointerAndState = readPrevsOfCurrent.getFirst();
       } else {
         assertThat(readPrevsOfCurrent).hasSize(2);
         readPrevPointerAndState = readPrevsOfCurrent.get(1);
@@ -1844,7 +1844,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
       // Free current list segment
       List<SMGState> newStatesAfterFree = currentState.free(previousListElementPtr, null, null);
       assertThat(newStatesAfterFree).hasSize(1);
-      currentState = newStatesAfterFree.get(0);
+      currentState = newStatesAfterFree.getFirst();
       // check that the prev from the just freed is still valid
       notAbstractedPrevListObj =
           currentState
@@ -1867,9 +1867,9 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
         currentState.dereferencePointer(runningListElementPointer);
     // Should only be 1 list element
     assertThat(deref).hasSize(1);
-    currentState = deref.get(0).getSMGState();
-    assertThat(deref.get(0).hasSMGObjectAndOffset()).isTrue();
-    assertThat(deref.get(0).getOffsetForObject().asNumericValue().bigIntegerValue())
+    currentState = deref.getFirst().getSMGState();
+    assertThat(deref.getFirst().hasSMGObjectAndOffset()).isTrue();
+    assertThat(deref.getFirst().getOffsetForObject().asNumericValue().bigIntegerValue())
         .isEqualTo(BigInteger.ZERO);
     // Read prev of current list segment (reads into 0+, causes materialization)
     List<ValueAndSMGState> readPrevsInLast =
@@ -1882,8 +1882,8 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
     // Should only be 1 list element
     assertThat(readPrevsInLast).hasSize(2);
     // When materializing, the first element is the minimal element, confirm that the value is 0
-    assertThat(readPrevsInLast.get(0).getValue().isNumericValue()).isTrue();
-    assertThat(readPrevsInLast.get(0).getValue().asNumericValue().bigIntegerValue())
+    assertThat(readPrevsInLast.getFirst().getValue().isNumericValue()).isTrue();
+    assertThat(readPrevsInLast.getFirst().getValue().asNumericValue().bigIntegerValue())
         .isEqualTo(BigInteger.ZERO);
     // Confirm that the other is materialized correctly
     currentState = readPrevsInLast.get(1).getState();
@@ -1902,7 +1902,7 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
     // Now we free the list element from before
     List<SMGState> freeList = currentState.free(runningListElementPointer, null, null);
     assertThat(freeList).hasSize(1);
-    currentState = freeList.get(0);
+    currentState = freeList.getFirst();
     // Compare the 2 states from before and now
     assertThat(currentState.isLessOrEqual(stateW1Left)).isTrue();
   }
